--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 
 		}
 		@media screen and (max-width: 450px){ /*Smartphones*/
+			*[class="font-bump"] {font-size: 16px !important;}
 			*[class="link-bump"] {font-size: 21px !important;}
 			
 		}
@@ -109,6 +110,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 									<td align="left" class="font-bump" style="font-size: 14px; color: #333333; font-family: Arial, Helvetica, sans-serif;">
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil minima ad praesentium natus, recusandae maxime officia! Nulla, esse magnam. Harum quia ipsum quod suscipit, delectus unde, accusamus et nesciunt iure.	
 									<br />
+									<p />orem ipsum dolor sit amet, consectetur adipisicing elit. Illo voluptatibus, tempora molestias sapiente ut, sit delectus explicabo velit quia, aspernatur minima quam quidem reiciendis saepe esse, debitis repellendus. Et, minima.
 								<tr>
 									<td height="20">										
 									</td>
